--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<nav id="leftnav" class="nav">
 				<a href="#" class="nav-center-item">Home</a>
 				<a href="#" class="nav-center-item">About</a>
-				<a href="#" class="nav-center-item">Contact</a>
+				<a href="contactus.html" class="nav-center-item">Contact</a>
 			</nav>
 
 
@@ -144,6 +144,8 @@
 				<button class="login nav-right-item" onclick="openForm()">login </button>
 
 				<button class="login nav-right-item" onclick="openform()">Sign-up </button>
+
+
 
 				<div class="form-popup" id="myForm">
 
