--- a/index2.html
+++ b/index2.html
@@ -120,6 +120,7 @@
 	<link rel="stylesheet" href="/footer.css" />
 	<link rel="stylesheet" href="/hm.css" />
 	<script src="/responsive-header.js"></script>
+	<script src="nightmode.js"></script>
 
 </head>
 
@@ -130,8 +131,8 @@
 			<div class="space-between-logo-and-nav"></div>
 			<nav id="leftnav" class="nav">
 				<a href="#" class="nav-center-item">Home</a>
-				<a href="#" class="nav-center-item">About</a>
-				<a href="#" class="nav-center-item">Contact</a>
+				<a href="about.html" class="nav-center-item">About</a>
+				<a href="contactus.html" class="nav-center-item">Contact</a>
 			</nav>
 
 
