--- a/contactus.html
+++ b/contactus.html
@@ -21,6 +21,10 @@ textarea {
   font-family: "Poppins", sans-serif;
 }
 
+h1{
+    text-align: center;
+    font-style: italic;
+}
 .container {
   position: relative;
   width: 100%;
@@ -372,6 +376,7 @@ textarea.input {
 
 
     <body>
+        <h1>Contact US</h1>
         <div class="container">
           
           <div class="form">
