--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./main.css">
 	<link rel="stylesheet" href="./footer.css">
 	<link rel="stylesheet" href="./header.css">
+	<link rel="stylesheet" href="./hm.css">
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +121,7 @@
 	<link rel="stylesheet" href="/footer.css" />
 	<link rel="stylesheet" href="/hm.css" />
 	<script src="/responsive-header.js"></script>
-	<script src="nightmode.js"></script>
+	<script src="/nightmode.js"></script>
 
 </head>
 
