--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		}
 
 		footer {
-			background-color: green;
+			background-color: rgb(119, 155, 119);
 			font-family: Poppins;
 		}
 
@@ -129,9 +129,9 @@
 			<div class="logo"><img src="logo.png" alt="" /></div>
 			<div class="space-between-logo-and-nav"></div>
 			<nav id="leftnav" class="nav">
-				<a href="#" class="nav-center-item">Home</a>
-				<a href="#" class="nav-center-item">About</a>
-				<a href="contactus.html" class="nav-center-item">Contact</a>
+				<a href="index2.html" class="nav-center-item">Home</a>
+				<a href="new.html" class="nav-center-item">About</a>
+				<a href="cn.html" class="nav-center-item">Contact</a>
 			</nav>
 
 
@@ -267,10 +267,10 @@
 		<input class="menu-btn" type="checkbox" id="menu-btn" />
 		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="menu">
-			<li><a href="#work">Our Work</a></li>
-			<li><a href="#about">About</a></li>
-			<li><a href="#careers">Careers</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="index2.html.">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<!-- <li><a href="#careers">Careers</a></li> -->
+			<li><a href="#contactus.html">Contact</a></li>
 			<li>
 
 				<a class="darkmode nav-right-item">
