--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 100%; */
+  width: 100%; 
 }
 
 #customers td, #customers th {
